changed templates to display Set and User attributes using HTML code rather than __str__

--- a/app/templates/browse_sets.html
+++ b/app/templates/browse_sets.html
@@ -3,6 +3,6 @@
   <h1>Browse All Sets</h1>
   <!-- print all items in list setlist (currently containing all sets) -->
   {% for set in setlist %}
-  	{% include 'set.html' %} <!-- use set.html sub-template for set -->
+	{% include 'set.html' %}
   {% endfor %}
 {% endblock %}
