--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -6,8 +6,8 @@
     <tr valign="top"> <!-- HTML table with two columns and two rows -->
       <td>
         <h1>User:<a href="{{ url_for ("user", tag=user.tag) }}">{{user.tag}}</a></h1> <!-- passed from views as user -->
-          {% if user.main %}<p>Main: {{ user.main }}</p>{% endif %}
-          {% if user.region %}<p>Region: {{ user.region }}</p>{% endif %}
+          {% if user.main %}<p><b>Main:</b> {{ user.main }}</p>{% endif %}
+          {% if user.region %}<p><b>Region:</b> {{ user.region }}</p>{% endif %}
       </td>
     </tr>
   </table>
