--- a/app/templates/set.html
+++ b/app/templates/set.html
@@ -1,4 +1,4 @@
-<div><p><b> {{ set }} </b></p></div>
+<div><p><b> {{ set.winner_tag }} vs {{ set.loser_tag }}: ({{ set.winner_score }}-{{ set.loser_score }}) {{ set.winner_tag }} </b></p></div> <!-- prints Set representation in HTML given a Set object -->
   {% for match in set.matches.all() %}
     <p> {{ match }} </p>
   {% endfor %}
