allowed set_create form to take score directly as an integer

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,8 @@
     <li> updated browse_users template to print User representation in HTML given User object, with route hyperlink to user profile </li>
     <li> updated browse_sets template to print Set representation in HTML given Set object rather than print a Set object using __str__ method</li>
     <li> updated set to take winner_id and loser_id upon set creation </li>
-    
+    <li> allowed set_create form to take score directly as an integer </li>
+
   </ul>
 
   <div> June 19, 2015 </div>
