--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
     <li> updated browse_sets template to print Set representation in HTML given Set object rather than print a Set object using __str__ method</li>
     <li> updated set to take winner_id and loser_id upon set creation </li>
     <li> allowed set_create form to take score directly as an integer </li>
+    <li> updated User methods for querying set to sort by set id (lower number = newer) </li>
 
   </ul>
 
