Sets now query and are created with User id based on submitted tag

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,7 @@
     <li> updated set to take winner_id and loser_id upon set creation </li>
     <li> allowed set_create form to take score directly as an integer </li>
     <li> updated User methods for querying set to sort by set id (lower number = newer) </li>
+    <li> Sets now query and are created with User id based on submitted tag </li>
 
   </ul>
 
