--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,6 +20,7 @@
     <li> allowed set_create form to take score directly as an integer </li>
     <li> updated User methods for querying set to sort by set id (lower number = newer) </li>
     <li> Sets now query and are created with User id based on submitted tag </li>
+    <li> stage field for matches during set creation are now entered using a SelectField dropdown menu <li>
 
   </ul>
 
