Created 'match.html' and revised 'set.html' template to import 'match.html' when rendering a set. It now prints Match representation in HTML given Match object rather than print a Match object using the Match __str__ method.

--- a/app/templates/set.html
+++ b/app/templates/set.html
@@ -1,4 +1,7 @@
-<div><p><b> {{ set.winner_tag }} vs {{ set.loser_tag }}: ({{ set.winner_score }}-{{ set.loser_score }}) {{ set.winner_tag }} </b></p></div> <!-- prints Set representation in HTML given a Set object -->
+<div><p><b> {{ set.winner_tag }} vs {{ set.loser_tag }}: ({{ set.winner_score }}-{{ set.loser_score }}) {{ set.winner_tag }} </b></p></div> 
+<!-- prints Set representation in HTML given a Set object -->
   {% for match in set.matches.all() %}
-    <p> {{ match }} </p>
+    {% include 'match.html' %}
   {% endfor %}
+
+<BR>&nbsp;<BR> <!-- Line break -->
