--- a/app/templates/set.html
+++ b/app/templates/set.html
@@ -1,4 +1,10 @@
-<div><p><b> {{ set.winner_tag }} vs {{ set.loser_tag }}: ({{ set.winner_score }}-{{ set.loser_score }}) {{ set.winner_tag }} </b></p></div> 
+<div><p><b> 
+	<a href="{{url_for("user", tag=set.winner_tag)}}">{{ set.winner_tag }}</a> vs 
+	<a href="{{url_for("user", tag=set.loser_tag)}}">{{ set.loser_tag }}</a>:
+	({{ set.winner_score }}-{{ set.loser_score }}) 
+	<a href="{{url_for("user", tag=set.winner_tag)}}">{{ set.winner_tag }}</a>  
+</b></p></div> 
+
 <!-- prints Set representation in HTML given a Set object -->
   {% for match in set.matches.all() %}
     {% include 'match.html' %}
