--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -5,7 +5,8 @@
   <table> <!-- Puts things into a table format neatly -->
     <tr valign="top"> <!-- HTML table with two columns and two rows -->
       <td>
-        <h1>User:<a href="{{ url_for ("user", tag=user.tag) }}">{{user.tag}}</a></h1> <!-- passed from views as user -->
+        <h1>User: <a href="{{ url_for ("user", tag=user.tag) }}">{{user.tag}}</a></h1> 
+        <!-- passed from views as user -->
           {% if user.main %}<p><b>Main:</b> {{ user.main }}</p>{% endif %}
           {% if user.region %}<p><b>Region:</b> {{ user.region }}</p>{% endif %}
       </td>
