added 'view_region.html' as a template to view all user from a specific regions, and added a route to view_region

--- a/app/templates/browse_users.html
+++ b/app/templates/browse_users.html
@@ -5,7 +5,9 @@
   {% for user in userlist %}
     <div><p>
       <b> <a href="{{ url_for("user", tag=user.tag) }}">{{ user.tag }}</a> 
-       | {{ user.region }} | {{ user.main }} </b> <!-- prints User representation in HTML given a User object, with route hyperlink to User profile -->
+       | <a href="{{ url_for("view_region", region=user.region) }}">{{user.region}}</a>
+       | {{ user.main }} </b>
+       <!-- prints User representation in HTML given a User object, with route hyperlink to User profile -->
     </p></div>
   {% endfor %}
 {% endblock %}
