winner character and loser character are now selected as a dropdown SelectField list rather than a string input

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
   <div> June 21, 2015 </div>
   <ul>
       <li> added "view_region.html" as a template to view all user from a specific regions, and added a route to view_region </li>
+      <li> winner character and loser character are now selected as a dropdown SelectField list rather than a string input </li>
   </ul>
 
   <div> June 20, 2015 </div>
