--- a/app/templates/match_submit.html
+++ b/app/templates/match_submit.html
@@ -11,11 +11,11 @@
       Please enter the match winner:<br>
       {{ form.match_winner(size=90) }}<br>
       Please enter the winner's character:<br>
-      {{ form.winner_char(size=90) }}<br>
+      {{ form.winner_char }}<br>
       Please enter the match loser:<br>
       {{ form.match_loser(size=90) }}<br>
       Please enter the loser's character: <br>
-      {{ form.loser_char(size=90) }}<br>
+      {{ form.loser_char }}<br>
 
       {% for error in form.match_stage.errors or form.match_winner.errors or form.match_loser.errors  %}
         <span style="color: red;">[{{ error }}]</span> <!-- flash error message if user_tag is invalid -->
