revised and optimized validation system to ensure legal sets are created

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <ul>
       <li> added "view_region.html" as a template to view all user from a specific regions, and added a route to view_region </li>
       <li> winner character and loser character are now selected as a dropdown SelectField list rather than a string input </li>
+      <li> revised and optimized validation system to ensure legal sets are created </li>
   </ul>
 
   <div> June 20, 2015 </div>
