match_submit now takes variables through URL from /set_create and /match_submit by using a query string on the URL

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,8 @@
       <li> added "view_region.html" as a template to view all user from a specific regions, and added a route to view_region </li>
       <li> winner character and loser character are now selected as a dropdown SelectField list rather than a string input </li>
       <li> revised and optimized validation system to ensure legal sets are created </li>
+      <li> match_submit now takes variables through URL from /set_create and /match_submit by using a query string on the URL </li>
+
   </ul>
 
   <div> June 20, 2015 </div>
