implemented head to head page (route /versus) between two users, which currently displays their played sets

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,7 @@
       <li> winner character and loser character are now selected as a dropdown SelectField list rather than a string input </li>
       <li> revised and optimized validation system to ensure legal sets are created </li>
       <li> match_submit now takes variables through URL from /set_create and /match_submit by using a query string on the URL </li>
+      <li> implemented head to head page (route /versus) between two users, which currently displays their played sets </li>
 
   </ul>
 
