implemented form and head_to_head.html page to allow searching for two users, then redirects to /versus to actually display their set history

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,7 @@
       <li> revised and optimized validation system to ensure legal sets are created </li>
       <li> match_submit now takes variables through URL from /set_create and /match_submit by using a query string on the URL </li>
       <li> implemented head to head page (route /versus) between two users, which currently displays their played sets </li>
+      <li> implemented form and head_to_head.html page to allow searching for two users, then redirects to /versus to actually display their set history </li>
 
   </ul>
 
