fixed bugs in head to head and revised templates; additionally, all sets now link to the match history page between two users

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,10 @@
 
   <h4>Recent Updates</h4>
 
+  <div> June 22, 2015 </div>
+  <ul>
+    <li> fixed bugs in head to head and revised templates; additionally, all sets now link to the match history page between two users </li>
+
   <div> June 21, 2015 </div>
   <ul>
       <li> added "view_region.html" as a template to view all user from a specific regions, and added a route to view_region </li>
