changed /region route to /browse_regions for consistency, and changed all related templates and routes to support that

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -9,7 +9,7 @@
         <!-- passed from views as user -->
           {% if user.main %}<p><b>Main:</b> {{ user.main }}</p>{% endif %}
           {% if user.region %}<p><b>Region:</b>
-          <a href="{{ url_for("view_region", region=user.region) }}">{{user.region}}</a>
+          <a href="{{ url_for("browse_regions", region=user.region) }}">{{user.region}}</a>
           </p>{% endif %}
       </td>
     </tr>
