--- a/app/templates/browse_users.html
+++ b/app/templates/browse_users.html
@@ -6,7 +6,7 @@
     <div><p>
       <b> <a href="{{ url_for("user", tag=user.tag) }}">{{ user.tag }}</a> 
        | <a href="{{ url_for("browse_regions", region=user.region) }}">{{user.region}}</a>
-       | {{ user.main }} </b>
+       | <a href="{{ url_for("browse_characters", character=user.main) }}">{{user.main}}</a> </b>
        <!-- prints User representation in HTML given a User object, with route hyperlink to User profile -->
     </p></div>
   {% endfor %}
