implemented /browse_regions and /browse_characters, and added routes to the base template

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,8 @@
       <a href="{{ url_for('index') }}">Home</a>
       | <a href="{{ url_for('browse_sets') }}">Browse Sets</a>
       | <a href="{{ url_for('browse_users') }}">Browse Users</a>
+      | <a href="{{ url_for('browse_regions') }}">Browse Regions</a>
+      | <a href="{{ url_for('browse_characters') }}">Browse Characters</a>
       | <a href="{{ url_for('head_to_head') }}">Head to Head</a>
       | <a href="{{ url_for('user_create') }}">Create User</a>
       | <a href="{{ url_for('set_create') }}">Create Set</a>
