updated all links to properly route to region and character pages

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,8 @@
     <li> changed /region route to /browse_regions for consistency, and changed all related templates and routes to support that </li>
     <li> implemented /browse_characters page where one may view all the game's characters in tier list order, which route to users who play that character </li>
     <li> changed /browse_regions to display all regions currently populated, and changed /region to be the page that actually displays users populating the region. </li>
-    <li> added /browse_regions and /browse_characters to the base template </li>
+    <li> added /browse_regions and /browse_characters routes to the base template </li>
+    <li> updated all links to properly route to region and character pages </li>
   </ul>
 
   <div> June 22, 2015 </div>
