--- a/app/templates/character.html
+++ b/app/templates/character.html
@@ -4,8 +4,8 @@
   {% for user in matching_users %}
      <div><p>
       <b> <a href="{{ url_for("user", tag=user.tag) }}">{{ user.tag }}</a> 
-      	| <a href="{{ url_for("browse_regions", region=user.region) }}">{{user.region}}</a>
-        | <a href="{{ url_for("browse_characters", character=user.main) }}">{{user.main}}</a> </b>
+      	| <a href="{{ url_for("region", region=user.region) }}">{{user.region}}</a>
+        | <a href="{{ url_for("character", character=user.main) }}">{{user.main}}</a> </b>
     </p></div>
   {% endfor %}
 {% endblock %}
