--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -7,9 +7,11 @@
       <td>
         <h1>User: <a href="{{ url_for ("user", tag=user.tag) }}">{{user.tag}}</a></h1> 
         <!-- passed from views as user -->
-          {% if user.main %}<p><b>Main:</b> {{ user.main }}</p>{% endif %}
+          {% if user.main %}<p><b>Main:</b>
+          <a href="{{ url_for("character", character=user.main) }}">{{user.main}}</a>
+          </p>{% endif %}
           {% if user.region %}<p><b>Region:</b>
-          <a href="{{ url_for("browse_regions", region=user.region) }}">{{user.region}}</a>
+          <a href="{{ url_for("region", region=user.region) }}">{{user.region}}</a>
           </p>{% endif %}
       </td>
     </tr>
