--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,11 @@
 
   <h4>Recent Updates</h4>
 
+<div> June 24, 2015 </div>
+  <ul>
+    <li> optimized /head_to_head, and now checks for query string variable existence first </li>
+  </ul>
+
   <div> June 23, 2015 </div>
   <ul>
     <li> merged 'versus.html' into 'head_to_head.html', and merged route /versus into /head_to_head so that only head_to_head references exist. Revised template to display head to head history on the same page as the search page, /head_to_head. Fixed bugs regarding head to head displays</li>
