/head_to_head form fields now populated with player tags of currently viewed head to head

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
 <div> June 24, 2015 </div>
   <ul>
     <li> optimized /head_to_head, and now checks for query string variable existence first </li>
+    <li> /head_to_head form fields now populated with player tags of currently viewed head to head </li>
   </ul>
 
   <div> June 23, 2015 </div>
