/user_create now requests for character main using a dropdown (SelectField) list

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <ul>
     <li> optimized /head_to_head, and now checks for query string variable existence first </li>
     <li> /head_to_head form fields now populated with player tags of currently viewed head to head </li>
+    <li> /user_create now requests for character main using a dropdown (SelectField) list. optimized forms.py </li>
   </ul>
 
   <div> June 23, 2015 </div>
