--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,16 +9,17 @@
   <div><a href="{{ url_for("browse_sets") }}">Apex 2015</a></div>
   <BR>&nbsp;<BR>
 
-  <h4>Recent Updates</h4>
+  <h3>Recent Updates</h3>
 
-<div> June 24, 2015 </div>
+<h4> June 24, 2015 </h4>
   <ul>
+    <li> NOTE: large bug: werkzeug.routing.BuildError, when viewing /browse_users and /browse_regions when it claims that the route to /region/region when displaying a user (tag, region, main) doesn't exist. This is actually because it is being passed a parameter of None from a new User who does not have the attribute region filled out, so the route is essentially /region/None rather than /region/region. The same holds true for other empty yet required attributes. Clear the database of these types of objects </li>
     <li> optimized /head_to_head, and now checks for query string variable existence first </li>
     <li> /head_to_head form fields now populated with player tags of currently viewed head to head </li>
     <li> /user_create now requests for character main using a dropdown (SelectField) list. optimized forms.py </li>
   </ul>
 
-  <div> June 23, 2015 </div>
+  <h4> June 23, 2015 </h4>
   <ul>
     <li> merged 'versus.html' into 'head_to_head.html', and merged route /versus into /head_to_head so that only head_to_head references exist. Revised template to display head to head history on the same page as the search page, /head_to_head. Fixed bugs regarding head to head displays</li>
     <li> Users now explicitly ordered by user_id in /browse_users. Sets now explicitly ordered by set_id in /browse_sets; sets displayed on user and head to head pages now explicitly ordered by set_id </li>
@@ -34,7 +35,7 @@
     <li> fixed bugs in head to head and revised templates; additionally, all sets now link to the match history page between two users </li>
   </ul>
 
-  <div> June 21, 2015 </div>
+  <h4> June 21, 2015 </h4>
   <ul>
       <li> added "view_region.html" as a template to view all user from a specific regions, and added a route to view_region </li>
       <li> winner character and loser character are now selected as a dropdown SelectField list rather than a string input </li>
@@ -44,7 +45,7 @@
       <li> implemented form and head_to_head.html page to allow searching for two users, then redirects to /versus to actually display their set history </li>
   </ul>
 
-  <div> June 20, 2015 </div>
+  <h4> June 20, 2015 </h4>
   <ul>
     <li> rendered index "Recent Update" changelog as unordered list</li>
     <li> fixed User query methods from Set</li>
@@ -61,7 +62,7 @@
     <li> updated 'browse_sets.html' template to display set winner and loser as hyperlink routes to User profiles </li>
   </ul>
 
-  <div> June 19, 2015 </div>
+  <h4> June 19, 2015 </h4>
   <ul>
     <li> Added "region" field to User model </li>
     <li> added support for region in web form, application </li>
