fixed User functions for querying and displaying User.secondaries

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,8 @@
     <li> optimized /head_to_head, and now checks for query string variable existence first </li>
     <li> /head_to_head form fields now populated with player tags of currently viewed head to head </li>
     <li> /user_create now requests for character main using a dropdown (SelectField) list. optimized forms.py </li>
+    <li> added Characters as Model, Secondaries as relationship table between Characters and Users </li>
+    <li> fixed User functions for querying and displaying User.secondaries </li>
   </ul>
 
   <h4> June 23, 2015 </h4>
