implemented creation of secondaries column from /create_user when creating User. Hardcoded database of Character objects

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,6 +14,7 @@
   <h4> June 25, 2015 </h5>
   <ul>
     <li> implemented Character-User functions from Character class, and updated unit test (tests.py) </li>
+    <li> implemented creation of secondaries column from /create_user when creating User. Hardcoded database of Character objects </li>
   </ul>
 
   <h4> June 24, 2015 </h4>
