--- a/app/templates/user_create.html
+++ b/app/templates/user_create.html
@@ -12,6 +12,8 @@
       {{ form.user_region(size=90) }}<br>
       Please enter the user's main:<br>
       {{ form.user_main }}<br>
+      Enter the user's secondaries, if any:<br>
+      {{ form.user_secondaries }}<br>
 
       {% for error in form.user_tag.errors and form.user_main.errors %}
         <span style="color: red;">[{{ error }}]</span> <!-- flash error message if user_tag is invalid -->
