--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -6,13 +6,24 @@
     <tr valign="top"> <!-- HTML table with two columns and two rows -->
       <td>
         <h1>User: <a href="{{ url_for ("user", tag=user.tag) }}">{{user.tag}}</a></h1> 
-        <!-- passed from views as user -->
-          {% if user.main %}<p><b>Main:</b>
+
+          <div> {{ user }} </div>
+
+          {% if user.main %}
+          <p><b>Main:</b>
           <a href="{{ url_for("character", character=user.main) }}">{{user.main}}</a>
           </p>{% endif %}
-          {% if user.region %}<p><b>Region:</b>
+
+          {% if user.region %}
+          <p><b>Region:</b>
           <a href="{{ url_for("region", region=user.region) }}">{{user.region}}</a>
           </p>{% endif %}
+
+          {% if user.secondaries %}
+          <p><b>Secondaries:</b>
+          {{ user.get_secondaries() }}
+          </p>{% endif %}
+
       </td>
     </tr>
   </table>
