--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,6 +15,7 @@
   <ul>
     <li> implemented Character-User functions from Character class, and updated unit test (tests.py) </li>
     <li> implemented creation of secondaries column from /create_user when creating User. Hardcoded database of Character objects </li>
+    <li> revised user_create form to allow secondaries character selection using checkboxes. Performed tests and bugfixing for secondaries and revised other templates </li>
   </ul>
 
   <h4> June 24, 2015 </h4>
