--- a/app/templates/browse_users.html
+++ b/app/templates/browse_users.html
@@ -3,11 +3,6 @@
   <h1>Browse All Users</h1>
   <!-- print all items in list userlist (currently containing all users) -->
   {% for user in userlist %}
-    <div><p>
-      <b> <a href="{{ url_for("user", tag=user.tag) }}">{{ user.tag }}</a> 
-       | <a href="{{ url_for("region", region=user.region) }}">{{user.region}}</a>
-       | <a href="{{ url_for("character", character=user.main) }}">{{user.main}}</a> </b>
-       <!-- prints User representation in HTML given a User object, with route hyperlink to User profile -->
-    </p></div>
+    {% include 'user_display.html' %}
   {% endfor %}
 {% endblock %}
