--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,7 @@
     <li> implemented creation of secondaries column from /create_user when creating User. Hardcoded database of Character objects </li>
     <li> revised user_create form to allow secondaries character selection using checkboxes. Performed tests and bugfixing for secondaries and revised other templates </li>
     <li> /create_user now doesn't add main character to secondaries if that character is selected in both user_main and user_secondaries </li>
+    <li> created subtemplate user_display and revised relevant templates to include it </li>
   </ul>
 
   <h4> June 24, 2015 </h4>
