--- a/app/templates/region.html
+++ b/app/templates/region.html
@@ -2,10 +2,6 @@
 {% block content %}
   <h1> {{ region }}'s Users </h1>
   {% for user in matching_users %}
-     <div><p>
-      <b> <a href="{{ url_for("user", tag=user.tag) }}">{{ user.tag }}</a> 
-      	| <a href="{{ url_for("region", region=user.region) }}">{{user.region}}</a> 
-    	| <a href="{{ url_for("character", character=user.main) }}">{{user.main}}</a> 
-    </p></div>
+    {% include 'user_display.html' %}
   {% endfor %}
 {% endblock %}
